Adding a bit about agile dev/SEIS

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -8,9 +8,9 @@
     <div class="container">
         <div class="row">
             <div class="col-12 col-md-6 col-lg-7 order-2 order-md-1 mt-5 pt-md-5">
-                <h3>I am a Web Developer, with a passion for learning. I'm experienced in Angular, Ionic,
+                <h3>I am a Web Developer, with a passion for learning. I'm experienced in Angular, AngularJS, Ionic,
                     ReactJS, C#,
-                    JavaScript, Typescript, HTML, and CSS. I'd love to work with you!</h3>
+                    JavaScript, Typescript, HTML, CSS and Sass. I'd love to work with you!</h3>
                 <div class='mt-3'>
                     <a routerLink='/contact' class="btn btn-outline-light mb-4">Contact Me!</a>
                     <a href="../../../assets/pdf/ChristyEangResume2021.pdf" target="_blank" class="btn btn-outline-light ml-2 mb-4">My Resume</a>
@@ -49,7 +49,7 @@
                 <h2>My Time To Code.</h2>
                 <a href="https://codestackacademy.org/" target="_blank" class="mb-1 csa"><b>CodeStack Academy</b></a>
                 <p>
-                    As a Codestack Student, I learned how to read, write, and love code. I was challenged day in and day
+                    As a Codestack Alumna, I learned how to read, write, and love code. I was challenged day in and day
                     out
                     and I persevered through the long nights and exciting group projects. Due to the Pandemic, Codestack
                     was
@@ -59,13 +59,22 @@
                     my
                     life. Codestack is a 9 month intensive program, Mon-Fri 9am-4pm, so I was completely emmersed in code.
                 </p>
+              <a>CodeStack Junior Web Developer Internship</a>
                 <p>
-                    I've been fortunate enough to work on projects in different languages, libraries and frameworks. At
-                    the
-                    moment, I've been really into Angular, so I decided to put my portfolio together in Angular! I enjoy
-                    using HTML5, CSS3, and JavaScript, but I find it so enjoyable to learn new things and have that
+                    I've been fortunate enough to work on projects in different languages, libraries and frameworks with time in an 
+                    Agile Environment, 
+                    participating in sprints and being able to learn senior level deveopers and testers. I was given the opportunity to create the
+                    <a href="https://stocktonmayor.org/" target="_blank" class="csa">Mayor Of Stockton's official
+                    website</a> during the first half of my internship in HTML, CSS. I was given the opportunity to continue my internship and once I accepted, 
+                    I was placed 
+                    into the group that manages <a href="https://www.seis.org/" target="_blank" class="csa">SEIS</a>.
+                    In SEIS I am able to further my full stack experience using AngularJS, C#, and SQL.</p>
+              <p>
+                    I've been really into Angular, so I decided to put my portfolio together in Angular! 
+                    I enjoy using HTML5, CSS3, and JavaScript, but I find it so enjoyable to learn new things and have that
                     "Aha!"
-                    moment in those new things! I love learning new things and meeting new people!
+                    moment in those new things! Picking up new things is a challenge, but challenges make life so much more interesting!
+                    I love learning new things and meeting new people and I cannot wait to meet you!
                 </p>
             </div>
         </div>
