home page changes

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -59,7 +59,7 @@
                     my
                     life. Codestack is a 9 month intensive program, Mon-Fri 9am-4pm, so I was completely emmersed in code.
                 </p>
-              <a>CodeStack Junior Web Developer Internship</a>
+              <p><b>CodeStack Junior Web Developer Internship</b></p>
                 <p>
                     I've been fortunate enough to work on projects in different languages, libraries and frameworks with time in an 
                     Agile Environment, 
@@ -67,8 +67,8 @@
                     <a href="https://stocktonmayor.org/" target="_blank" class="csa">Mayor Of Stockton's official
                     website</a> during the first half of my internship in HTML, CSS. I was given the opportunity to continue my internship and once I accepted, 
                     I was placed 
-                    into the group that manages <a href="https://www.seis.org/" target="_blank" class="csa">SEIS</a>.
-                    In SEIS I am able to further my full stack experience using AngularJS, C#, and SQL.</p>
+                    into the group that manages <a href="https://www.seis.org/" target="_blank" class="csa">SEIS</a>. SEIS is a website that serves special education all over California. This is a huge code base and taught me so much about coding, and teamwork.
+                    In SEIS I was able to further my full stack experience using AngularJS, C#, and SQL.</p>
               <p>
                     I've been really into Angular, so I decided to put my portfolio together in Angular! 
                     I enjoy using HTML5, CSS3, and JavaScript, but I find it so enjoyable to learn new things and have that
