--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,76 +1,219 @@
 <div class="container mt-5">
-<!-- Top h1 -->
+    <!-- Top h1 -->
 
     <div class="row">
         <div class="col-12">
             <h1 class="center">About Christy</h1>
         </div>
+        <div class="col-12">
+
+        </div>
     </div>
-    
+
     <div class="row">
-        <div class="col-12 col-md-6 col-lg-7">
-            <h2 class="mt-3">My Time To Code.</h2>
-            <p class="mb-1"><b>CodeStack Academy</b></p>
+        <div class="col-2 d-flex justify-content-center mt-3">
+            <div class="d-none d-lg-block">
+                <div class="mb-3">
+                    <i class="devicon-angularjs-plain colored x" placement="top" ngbTooltip="Angular"></i>
+
+                </div>
+                <div class="mb-3">
+                    <i class="devicon-ionic-original colored x" placement="top" ngbTooltip="Ionic with Angular"></i>
+
+                </div>
+                <div class="mb-3">
+                    <i class="devicon-react-original colored x" placement="top" ngbTooltip="React JS"></i>
+
+                </div>
+                <div class="mb-3">
+                    <i class="devicon-typescript-plain colored x" placement="top" ngbTooltip="Typescript"></i>
+
+                </div>
+                <div class="mb-3">
+                    <img src="../../../assets/images/sqllogowhitesmol.png" class="bgwhite" alt="sql logo"
+                        placement="top" ngbTooltip="SQL">
+
+                </div>
+                <div class="mb-3">
+                    <i class="devicon-javascript-plain colored x" placement="top" ngbTooltip="Javascript"></i>
+
+                </div>
+                <div class="mb-3">
+                    <i class="devicon-html5-plain colored x" placement="top" ngbTooltip="HTML"></i>
+
+                </div>
+                <div class="mb-3">
+                    <i class="devicon-csharp-plain colored x" placement="top" ngbTooltip="C#"></i>
+
+                </div>
+                <div class="mb-3">
+                    <i class="devicon-css3-plain colored x" placement="top" ngbTooltip="CSS"></i>
+
+                </div>
+            </div>
+        </div>
+
+
+        <div class="col-12 col-md-8">
+            <h2 class="mt-3">My Experience In Code.</h2>
+
+            <p><b>CodeStack Junior Web Developer Internship</b></p>
             <p>
-                As a Codestack Student, I learned how to read, write, and love code. I was challenged day in and day out and I persevered through the long nights and exciting group projects. Due to the Pandemic, Codestack was moved fully online and because of that, communication has become such an important part of the process. I cannot envision my life without coding anymore. It has been such an important and amazing part of my life.
+                I've been fortunate enough to work on projects in different languages, libraries and frameworks with
+                time in an
+                Agile Environment,
+                participating in sprints and being able to learn senior level deveopers and testers. I was given the
+                opportunity to create the
+                <a href="https://stocktonmayor.org/" target="_blank" class="csa">Mayor Of Stockton's official
+                    website</a> during the first half of my internship in HTML, CSS. I was given the opportunity to
+                continue my internship and once I accepted,
+                I was placed
+                into the group that manages <a href="https://www.seis.org/" target="_blank" class="csa">SEIS</a>. SEIS
+                is a website that serves special education all over California. This is a huge code base and taught me
+                so much about coding, and teamwork.
+                In SEIS I was able to further my full stack experience using AngularJS, C#, and SQL.
             </p>
+            <p class="mb-1"><b>Mike's Mobile Services</b></p>
+            <p>Web Developer</p>
             <p>
-                I've been fortunate enough to work on projects in different languages, libraries and frameworks. At the moment, I've been really into Angular, so I decided to put my portfolio together in Angular! I enjoy using HTML5, CSS3, and JavaScript, but I find it so enjoyable to learn new things and have that "Aha!" moment in those new things! I love learning new things and meeting new people!
+                I was hired on to be the Web Developer at Mike's Mobile. I was able to participate in the redesign and
+                management of the Mike's Mobile website, made in Angular and management of the company's usage of the
+                CRM, Service Titan. I was also tasked with the management of all hardware used in the company. This was
+                definitely not what I was expecting! A couple of months in, I was able to learn the ropes of Mike's
+                Mobile's proprietary software, Bear Hands Pro, created in React, using MongoDB and NodeJS. I learned so
+                much from my senior developers and had lots of fun getting to know all the technicians and people, but
+                it was time to move on!
             </p>
-            <a href="../../../assets/pdf/ChristyEangResume2021.pdf" target="_blank" class="btn btn-outline-light mb-3">Christy's Resume</a>
+
+            <p class="mb-1"><b>CodeStack - SJCOE</b></p>
+            <p>Associate Web Developer</p>
+            <p>
+                I am currently an Associate Web Developer at CodeStack, developing fullstack applications and assisting
+                in training interns and junior web developers. I am currently working on rebuilding a site called DRDP
+                in Angular, TailwindCss, and .Net6. My team was working on Captain's internal application, but was moved
+                over to DRDP full time! Working together with this team has been such an amazing experience. I've
+                learned so much in the past couple of months to build each other into fullstack developers!
+            </p>
+            <a href="../../../assets/pdf/ChristyEangResume2022.pdf" target="_blank"
+                class="btn btn-outline-light mb-5">Christy's Resume</a>
 
 
         </div>
-        <div class="col-12 col-md-6 col-lg-5 mr-0 d-flex justify-content-end align-items-end">
-            <img src="../../../assets/images/MyPic.png" height="400px" alt="Picture of Christy">
+        <div class="d-flex justify-content-center col-2 mt-3">
+            <div class="d-none d-lg-block">
+                <div class="mb-3">
+                    <i class="fab fa-unity fa-3x" placement="top" ngbTooltip="Unity"></i>
+
+                </div>
+                <div class="mb-3">
+                    <img src="../../../assets/images/filezillalogo.png" alt="filezilla logo" placement="top"
+                        ngbTooltip="FileZilla">
+
+                </div>
+                <div class="mb-3">
+                    <i class="icons fab fa-github-alt fa-3x" placement="top" ngbTooltip="Github"></i>
+
+                </div>
+                <div class="mb-3">
+                    <i class="devicon-typescript-plain colored x" placement="top" ngbTooltip="Typescript"></i>
+
+                </div>
+                <div class="mb-3">
+                    <i class="devicon-bootstrap-plain colored x" placement="top" ngbTooltip="Bootstrap"></i>
+
+                </div>
+                <div class="mb-3">
+                    <i class="devicon-xd-plain colored x" placement="top" ngbTooltip="Adobe XD"></i>
+
+                </div>
+                <div class="mb-3">
+                    <img src="../../../assets/images/jiralogo.png" alt="jira logo" placement="top" ngbTooltip="Jira">
+
+                </div>
+                <div class="mb-3">
+                    <img src="../../../assets/images/slackicon50.png" alt="slack icon" placement="top"
+                        ngbTooltip="Slack">
+
+                </div>
+                <div class="mb-3">
+                    <img src="../../../assets/images/postmanlogo.png" alt="postman logo" placement="top"
+                        ngbTooltip="Postman">
+
+                </div>
+            </div>
         </div>
+
+
+
+
+
+
+
+
+
+
+
+
     </div>
     <!-- Information About My Experience -->
-    <div class="border-top mx-0 mb-4"></div>
-    <div class="row">
-        <div class="col-sm-6 col-lg-4">
-            <h3 class="center text-center mb-5"><u>Experienced Skills:</u></h3>
-            <div class="col-12 ar mb-5">
+    <div class="d-lg-none">
+
+        <div class="border-top mx-0 mb-4"></div>
+        <div class="row">
+            <div class="col-sm-6 col-lg-4">
+                <h3 class="center text-center mb-5"><u>Experienced Skills:</u></h3>
+                <div class="col-12 ar mb-5">
                     <i class="devicon-angularjs-plain colored x" placement="top" ngbTooltip="Angular"></i>
-                <i class="devicon-ionic-original colored x" placement="top" ngbTooltip="Ionic with Angular"></i>
-                <i class="devicon-react-original colored x" placement="top" ngbTooltip="React JS"></i>
-            </div>
-            <div class="col-12 ar mb-5">
-                <i class="devicon-typescript-plain colored x" placement="top" ngbTooltip="Typescript"></i>
-                <img src="../../../assets/images/sqllogowhitesmol.png" class="bgwhite" alt="sql logo" placement="top" ngbTooltip="SQL">
-                <i class="devicon-javascript-plain colored x" placement="top" ngbTooltip="Javascript"></i>
-            </div>
-            <div class="col-12 ar mb-5">
-                <i class="devicon-html5-plain colored x" placement="top" ngbTooltip="HTML"></i>
-                <i class="devicon-csharp-plain colored x" placement="top" ngbTooltip="C#"></i>
-                <i class="devicon-css3-plain colored x" placement="top" ngbTooltip="CSS"></i>
-            </div>
-        </div>
-
-        <div class="col-lg-4 d-none d-lg-block"></div>
-        
-        <div class="col-sm-6 col-lg-4">
-            <h3 class="center text-center mb-5"><u>Development Tools:</u></h3>
-            <div class="col-12 ar mb-5">
-                <i class="fab fa-unity fa-3x" placement="top" ngbTooltip="Unity"></i>
-                <img src="../../../assets/images/filezillalogo.png" alt="filezilla logo" placement="top" ngbTooltip="FileZilla">
-                <i class="icons fab fa-github-alt fa-3x" placement="top" ngbTooltip="Github"></i>
-            </div>
-            
-            <div class="col-12 ar mb-5">
-                <!-- <i class="devicon-visualstudio-plain colored x" placement="top" ngbTooltip="Visual Studio Code"></i> -->
-                <img src="../../../assets/images/vsCode.png" alt="Visual Studio Code icon" placement="top" ngbTooltip="Visual Studio Code">
-                <i class="devicon-bootstrap-plain colored x" placement="top" ngbTooltip="Bootstrap"></i>
-                <i class="devicon-xd-plain colored x" placement="top" ngbTooltip="Adobe XD"></i>
+                    <i class="devicon-ionic-original colored x" placement="top" ngbTooltip="Ionic with Angular"></i>
+                    <i class="devicon-react-original colored x" placement="top" ngbTooltip="React JS"></i>
+                </div>
+                <div class="col-12 ar mb-5">
+                    <i class="devicon-typescript-plain colored x" placement="top" ngbTooltip="Typescript"></i>
+                    <img src="../../../assets/images/sqllogowhitesmol.png" class="bgwhite" alt="sql logo"
+                        placement="top" ngbTooltip="SQL">
+                    <i class="devicon-javascript-plain colored x" placement="top" ngbTooltip="Javascript"></i>
+                </div>
+                <div class="col-12 ar mb-5">
+                    <i class="devicon-html5-plain colored x" placement="top" ngbTooltip="HTML"></i>
+                    <i class="devicon-csharp-plain colored x" placement="top" ngbTooltip="C#"></i>
+                    <i class="devicon-css3-plain colored x" placement="top" ngbTooltip="CSS"></i>
+                </div>
             </div>
 
-            <div class="col-12 ar mb-5">
-                <img src="../../../assets/images/jiralogo.png" alt="jira logo" placement="top" ngbTooltip="Jira">
-                <img src="../../../assets/images/slackicon50.png" alt="slack icon" placement="top" ngbTooltip="Slack">
-                <img src="../../../assets/images/postmanlogo.png" alt="postman logo" placement="top" ngbTooltip="Postman">
-            </div>
+            <div class="col-lg-4 d-none d-lg-block"></div>
 
+            <div class="col-sm-6 col-lg-4">
+                <h3 class="center text-center mb-5"><u>Development Tools:</u></h3>
+                <div class="col-12 ar mb-5">
+                    <i class="fab fa-unity fa-3x" placement="top" ngbTooltip="Unity"></i>
+                    <img src="../../../assets/images/filezillalogo.png" alt="filezilla logo" placement="top"
+                        ngbTooltip="FileZilla">
+                    <i class="icons fab fa-github-alt fa-3x" placement="top" ngbTooltip="Github"></i>
+                </div>
+
+                <div class="col-12 ar mb-5">
+                    <!-- <i class="devicon-visualstudio-plain colored x" placement="top" ngbTooltip="Visual Studio Code"></i> -->
+                    <img src="../../../assets/images/vsCode.png" alt="Visual Studio Code icon" placement="top"
+                        ngbTooltip="Visual Studio Code">
+                    <i class="devicon-bootstrap-plain colored x" placement="top" ngbTooltip="Bootstrap"></i>
+                    <i class="devicon-xd-plain colored x" placement="top" ngbTooltip="Adobe XD"></i>
+                </div>
+
+                <div class="col-12 ar mb-5">
+                    <img src="../../../assets/images/jiralogo.png" alt="jira logo" placement="top" ngbTooltip="Jira">
+                    <img src="../../../assets/images/slackicon50.png" alt="slack icon" placement="top"
+                        ngbTooltip="Slack">
+                    <img src="../../../assets/images/postmanlogo.png" alt="postman logo" placement="top"
+                        ngbTooltip="Postman">
+                </div>
+
+            </div>
         </div>
     </div>
+
+
+
+
+
 </div>
 <app-footer></app-footer>
