--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -13,7 +13,7 @@
                     JavaScript, Typescript, HTML, CSS and Sass. I'd love to work with you!</h3>
                 <div class='mt-3'>
                     <a routerLink='/contact' class="btn btn-outline-light mb-4">Contact Me!</a>
-                    <a href="../../../assets/pdf/ChristyEangResume2021.pdf" target="_blank" class="btn btn-outline-light ml-2 mb-4">My Resume</a>
+                    <a href="../../../assets/pdf/ChristyEangResume2022.pdf" target="_blank" class="btn btn-outline-light ml-2 mb-4">My Resume</a>
 
                 </div>
                 <div class="mb-2">
@@ -59,23 +59,16 @@
                     my
                     life. Codestack is a 9 month intensive program, Mon-Fri 9am-4pm, so I was completely emmersed in code.
                 </p>
-              <p><b>CodeStack Junior Web Developer Internship</b></p>
-                <p>
-                    I've been fortunate enough to work on projects in different languages, libraries and frameworks with time in an 
-                    Agile Environment, 
-                    participating in sprints and being able to learn senior level deveopers and testers. I was given the opportunity to create the
-                    <a href="https://stocktonmayor.org/" target="_blank" class="csa">Mayor Of Stockton's official
-                    website</a> during the first half of my internship in HTML, CSS. I was given the opportunity to continue my internship and once I accepted, 
-                    I was placed 
-                    into the group that manages <a href="https://www.seis.org/" target="_blank" class="csa">SEIS</a>. SEIS is a website that serves special education all over California. This is a huge code base and taught me so much about coding, and teamwork.
-                    In SEIS I was able to further my full stack experience using AngularJS, C#, and SQL.</p>
-              <p>
+                    <p>
                     I've been really into Angular, so I decided to put my portfolio together in Angular! 
                     I enjoy using HTML5, CSS3, and JavaScript, but I find it so enjoyable to learn new things and have that
                     "Aha!"
                     moment in those new things! Picking up new things is a challenge, but challenges make life so much more interesting!
                     I love learning new things and meeting new people and I cannot wait to meet you!
                 </p>
+                <button (click)="open(content)" class="btn btn-outline-light mb-3">About Christy</button>
+        
+              
             </div>
         </div>
 
@@ -128,3 +121,20 @@
     </div>
 </div>
 <app-footer></app-footer>
+
+
+<ng-template #content let-modal>
+    <div class="blue-bg modal-header">
+      <h4>{{this.about.name}}</h4>
+      <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+        <span class="white" aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    <div class="blue-bg modal-body">
+
+        <p [innerHTML]="about.long"></p>
+    </div>
+    <div class="blue-bg modal-footer">
+      <button class="btn btn-outline-light" (click)="modal.dismiss('Cross click')">{{about.btn}}</button>
+    </div>
+  </ng-template>
