--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -5,20 +5,19 @@
             <a class="white" href="mailto:Christy@eang.com">Christy Eang => Christy@Eang.Dev</a>
             </div>
             <div class="col-12 mt-2 center">
-                <a aria-label="Christy's Github" target="_blank" href='https://github.com/christycreme95'>
-
+                <a aria-label="Christy's Github" target="_blank" [href]='UrlSegments[url.GitHub]'>
                     <i class="icons fab fa-github-alt fa-2x"></i>
                 </a>
-                <a aria-label="Christy's LinkedIn" target="_blank" href='https://www.eang.dev/linkedin' class="ml-3">
+                <a aria-label="Christy's LinkedIn" target="_blank" [href]='UrlSegments[url.LinkedIn]' class="ml-3">
                     <i class="icons fab fa-linkedin-in fa-2x"></i>
                 </a>
-                <a aria-label="Christy's Instagram" target="_blank" href='https://www.instagram.com/christycreme95/' class="ml-3">
+                <a aria-label="Christy's Instagram" target="_blank" [href]='UrlSegments[url.Instagram]' class="ml-3">
                     <i class="icons fab fa-instagram fa-2x"></i>
                 </a>
-                <a aria-label="Christy's Code Wars" target="_blank" href='https://www.codewars.com/users/ChristyCreme' class="ml-3">
+                <a aria-label="Christy's Code Wars" target="_blank" [href]='UrlSegments[url.CodeWars]' class="ml-3">
                     <div class="codewars" alt="codewars icon"></div>
                 </a>
-                <a aria-label="Christy's Facebook" target="_blank" href='https://www.facebook.com/christycreme95' class="ml-3">
+                <a aria-label="Christy's Facebook" target="_blank" [href]='UrlSegments[url.Facebook]' class="ml-3">
                     <i class="icons fab fa-facebook fa-2x"></i>
                 </a>
             </div>
