--- a/src/app/components/home-text/home-text.component.html
+++ b/src/app/components/home-text/home-text.component.html
@@ -1,3 +1,9 @@
-<div class="pt-5">
-    <h2 class="big">Christy Eang, {{name}} from Stockton, California.</h2>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-12 text-center">
+      <div class="pt-5">
+        <h2 class="big">Christy Eang, {{name}} <br /> from Stockton, California.</h2>
+      </div>
+    </div>
+  </div>
 </div>
