--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -1,4 +1,4 @@
-<h1 class="center mt-5 pt-lg-5">Christy's Projects</h1>
+<h2 class="center mt-5">Christy's Projects</h2>
 
 <div class="container">
     <div class="row mb-4">
@@ -32,13 +32,9 @@
                     <!-- <p style="color: rgb(0, 255, 255); position: absolute; bottom: 15px; font-size: 12px;" class="pr-4">{{proj.keywords}}</p> -->
                   <a alt="globe" target="_blank" href="{{proj.src}}"><i class="icons fas fa-globe fa-2x"></i></a>
                 </a>
-                
+
             </div>
 
         </div>
     </div>
 </div>
-
-
-  
-<app-footer></app-footer>
