--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -6,21 +6,12 @@
         <a class="nav-link" #home routerLink='/home'>Christy's Portfolio</a>
       </li>
       <div class="m-auto"></div>
-      <!-- <li class="nav-item text-center">
-        <a class="nav-link" #nav routerLink='/about'>About</a>
-      </li> -->
-      <!-- <li class="nav-item text-center mx-4">
-        <a class="nav-link no">Christy's Portfolio</a>
-      </li> -->
+      <li class="nav-item">
+        <a class="nav-link text-right active" routerLink='/home'>Home</a>
+      </li>
       <li class="nav-item text-center">
         <a class="nav-link" #projects routerLink='/projects'>Projects</a>
       </li>
-      <li class="nav-item text-center">
-        <a class="nav-link" #contact routerLink='/contact'>Contact</a>
-      </li>
-      <!-- <li class="nav-item text-center">
-        <a class="nav-link" target="_blank" href="../../../assets/pdf/ChristyEangResume2021.pdf">Resume</a>
-      </li> -->
     </ul>
   </div>
 </div>
@@ -38,14 +29,8 @@
         <li class="nav-item">
           <a class="nav-link text-right active" routerLink='/home'>Home</a>
         </li>
-        <!-- <li class="nav-item">
-          <a class="nav-link text-right active" routerLink='/about'>About</a>
-        </li> -->
         <li class="nav-item">
             <a class="nav-link text-right active" routerLink='/projects'>Projects</a>
-          </li>
-        <li class="nav-item">
-          <a class="nav-link text-right active" routerLink='/contact'>Contact</a>
         </li>
       </ul>
     </div>
